--- a/public/index.html
+++ b/public/index.html
@@ -5,24 +5,22 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0a1730" />
-    <meta
-      name="description"
-      content="Набор для улучшения WASD.TV"
-    />
+    <meta name="description" content="Набор для улучшения WASD.TV" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>BetterWASYA</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4YLPDXPJ76"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6HEQS4ZY3G"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'G-4YLPDXPJ76');
+      gtag("config", "G-6HEQS4ZY3G");
     </script>
-    
   </head>
   <body>
     <noscript>Вам необходимо включить JavaScript, чтобы запустить это приложение.</noscript>
