--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>BetterWASYA</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6HEQS4ZY3G"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXCZRP1CLT"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -19,7 +19,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-6HEQS4ZY3G");
+      gtag("config", "G-ZXCZRP1CLT");
     </script>
   </head>
   <body>
